# meer_tec

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish.yml  python-publish.yml  test.yml
docs/: index.rst  install.rst
meer_tec/: __init__.py  _version.py  interfaces.py  mecom.py  meer_tec.py  tec.py
tests/: meer_tec_test.py  test_interfaces.py  test_mecom.py  test_tec.py
