[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[project]
name = "meer_tec"
description = "MeCom for Python"
authors = [
  { name = "Bastian Leykauf" },
  { email = "leykauf@physik.hu-berlin.de" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
]
dependencies = ["pythoncrc"]
dynamic = ["version"]

[tool.setuptools_scm]
write_to = "meer_tec/_version.py"

[project.optional-dependencies]
dev = [
  "black>=23.7.0",
  "pre-commit>=2.20.0",
  "flake8>=5.0.4",
  "rope>=1.3.0",
  "isort>=5.10.1",
  "Flake8-pyproject>=1.1.0.post0",
  "setuptools_scm>=6.2",
]

[project.urls]
homepage = "https://github.com/bleykauf/meer_tec/"
repository = "https://github.com/bleykauf/meer_tec/"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = "PyCRC.CRCCCITT"
ignore_missing_imports = true
