[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[project]
name = "meer_tec"
description = "MeCom for Python"
authors = [
  { name = "Bastian Leykauf" },
  { email = "leykauf@physik.hu-berlin.de" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
]
dependencies = ["pythoncrc>=0.10.0", "pyserial>=3.5"]
dynamic = ["version"]

[tool.setuptools_scm]
write_to = "meer_tec/_version.py"

[project.optional-dependencies]
dev = [
  "black>=23.11.0",
  "pre-commit>=2.20.0",
  "flake8>=5.0.4",
  "isort>=5.10.1",
  "Flake8-pyproject>=1.1.0.post0",
  "setuptools_scm>=6.2",
  "pytest>=7.4.3",
]

[project.urls]
homepage = "https://github.com/bleykauf/meer_tec/"
repository = "https://github.com/bleykauf/meer_tec/"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = "PyCRC.CRCCCITT"
ignore_missing_imports = true
