[metadata]
name = meer_tec
description = MeCom for Python
url = https://github.com/bleykauf/meer_tec
author = Bastian Leykauf
author_email = leykauf@physik.hu-berlin.de
maintainer = Bastian Leykauf
maintainer_email = leykauf@physik.hu-berlin.de
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: Science/Research

[options]
python_requires = >= 3.6
setup_requires =
    setuptools >= 38.3.0
install_requires = pythoncrc
packages = find:

[versioneer]
VCS = git
style = pep440
versionfile_source = meer_tec/_version.py
versionfile_build = meer_tec/_version.py
tag_prefix =
parentdir_prefix = meer_tec-

[flake8]
docstring-convention = numpy
per-file-ignores =
    tests/*: D103, D100
exclude = meer_tec/_version.py
max-line-length = 88
extend-ignore = E203